# UIA

./: README.md
Fall-2020-UIA/ikt101/For_fun_project/SnakeGame/: CMakeLists.txt  main.c  snake.c  snake.h
Fall-2020-UIA/ikt101/For_fun_project/Vaskemaskin_Program/: Run_vaskemaskin.py  Vaskemaskin_v1.4.py  vaskemaskin_data.xlsx
Fall-2020-UIA/ikt101/Math_project/: Task_1_c.py  Task_1_d.py  Task_2_graphs.py  newton_algorithm.py
Fall-2020-UIA/ikt101/assignment_2_1/: main.c
Fall-2020-UIA/ikt101/assignment_3_1/: main.c
Fall-2020-UIA/ikt101/assignment_4_1/: main.c
Fall-2020-UIA/ikt101/assignment_4_2/: main.c
Fall-2020-UIA/ikt101/assignment_4_3/: main.c
Fall-2020-UIA/ikt101/assignment_4_4/: main.c
Fall-2020-UIA/ikt101/assignment_5_1/: main.c
Fall-2020-UIA/ikt101/assignment_5_2/: main.c  student.c  student.h
Fall-2020-UIA/ikt101/assignment_6_1/: main.c
Fall-2020-UIA/ikt101/assignment_6_2/: main.c  student.c  student.h
Fall-2020-UIA/ikt101/assignment_7_1/: main.cpp
Fall-2020-UIA/ikt101/assignment_7_2/: main.cpp
Fall-2020-UIA/ikt101/assignment_7_3/: main.cpp  students.cpp  students.h
Fall-2020-UIA/ikt101/assignment_7_3_new_onlymaps/: main.cpp
Fall-2021-UIA/discrete math 2/RSA_encrypt/: main.py
Fall-2021-UIA/ikt111/python_files_exam/: Chat_bot_v2.py  connect_four_v3.py  flappy_bird_v2.py  snake_v3.py
Fall-2021-UIA/ikt201/assignment_1/: assignment_1.sln
Fall-2021-UIA/ikt201/assignment_1/Properties/: launchSettings.json
Fall-2021-UIA/ikt201/assignment_2/: assignment_2.sln
Fall-2021-UIA/ikt201/assignment_2/Controllers/: Calculator.cs
Fall-2021-UIA/ikt201/assignment_3/: Startup.cs  assignment_3.csproj  assignment_3.sln
Fall-2021-UIA/ikt201/assignment_4/: Program.cs  Startup.cs  app.db  assignment_4.csproj  assignment_4.sln
Fall-2021-UIA/ikt203/projects/: Using CLion with SFML.pptx
Fall-2021-UIA/ikt203/projects/project 1 - game of life/: CMakeLists.txt  IKT203 Project 1 Skeleton Game of Life.c  main.cpp  winbgi.cpp
Fall-2021-UIA/ikt203/projects/project 1 - game of life/include/: graphics.h  patterns.h
Fall-2021-UIA/ikt203/projects/project 1 - game of life_non_graphics/: CMakeLists.txt  IKT203 Project 1 Game of Life.doc  main.c  patterns.h
Fall-2021-UIA/ikt203/projects/project 4 - maze navigation/: CMakeLists.txt  IKT203 Project 4 Maze Navigation NEW.doc  main.cpp
Fall-2021-UIA/ikt203/projects/project 4 - maze navigation/assets/: test.txt
Fall-2021-UIA/ikt203/projects/project 4 - maze navigation/includes/: Stack_returnpath.cpp  Stack_returnpath.h  bestanavnet.h  godtnavn.cpp  godtnavn.h  library.cpp  library.h  myString.c  myString.h  queue.cpp  queue.h  queue_wave_front.cpp  queue_wave_front.h
Fall-2021-UIA/ikt203/projects/project 5 Air Traffic Controller/: CMakeLists.txt  IKT203 Project 5 Air Traffic Controller.doc  main.cpp
Fall-2021-UIA/ikt203/projects/project 5 Air Traffic Controller/includes/: Graphics.cpp  Graphics.h  aircraft.cpp  aircraft.h  gift_wrap_algorithm.cpp  gift_wrap_algorithm.h  linked_list.cpp  linked_list.h  queue.cpp  queue.h
Fall-2021-UIA/ikt203/projects/project_3/: CMakeLists.txt  IKT203 Project 3 Interactive Polygon Editor NEW.doc  main.cpp
Fall-2021-UIA/ikt203/projects/project_3/SFML/doc/html/: Glyph_8hpp_source.html  Utf_8hpp_source.html  classsf_1_1Glyph.html  classsf_1_1Music.html  classsf_1_1Texture.html  classsf_1_1Utf_3_0116_01_4-members.html  classsf_1_1Utf_3_0116_01_4.html  classsf_1_1Utf_3_0132_01_4-members.html  classsf_1_1Utf_3_0132_01_4.html  classsf_1_1Utf_3_018_01_4-members.html  classsf_1_1Utf_3_018_01_4.html  functions_func_n.html  functions_n.html
Fall-2021-UIA/ikt203/projects/project_3/SFML/include/SFML/Audio/: Music.hpp  SoundStream.hpp
Fall-2021-UIA/ikt203/projects/project_3/SFML/include/SFML/Graphics/: Font.hpp  Glyph.hpp  Texture.hpp
Fall-2021-UIA/ikt203/projects/project_3/SFML/include/SFML/System/: Utf.hpp
Fall-2021-UIA/ikt203/projects/project_3/cmake_modules/: FindSFML.cmake
Fall-2021-UIA/ikt203/projects/project_3/includes/: Polygon.h  graphics_handling.cpp  graphics_handling.h  library.cpp  library.h  linked_list.cpp  linked_list.h
Fall-2021-UIA/ikt203/projects/project_6_-_expression_parsing_and_evaluation/: CMakeLists.txt  IKT203 Project 6 Expression Parsing and Evaluation.doc  main.cpp
Fall-2021-UIA/ikt203/projects/project_6_-_expression_parsing_and_evaluation/laae/: laae.cpp  laae.h
Fall-2021-UIA/ikt203/projects/project_6_-_expression_parsing_and_evaluation/myString/: myString.cpp
Fall-2021-UIA/ikt203/projects/project_6_-_expression_parsing_and_evaluation/parsetree/: parsetree.cpp  parsetree.h
Fall-2021-UIA/itk201_project/Mockup/: calendarlogic.py
Spring-2021-UIA/ikt103_python/exam/: client.py  server.py
Spring-2022-UIA/ikt103_cpp/assignment_2_1/: CMakeLists.txt  main.cpp
Spring-2022-UIA/ikt103_cpp/assignment_2_1/Controller/: MainController.cpp  MainController.h
Spring-2022-UIA/ikt103_cpp/assignment_2_1/Model/: Database.cpp  Database.h  Student.cpp  Student.h  Test.cpp  Test.h  TestResult.cpp  TestResult.h
Spring-2022-UIA/ikt103_cpp/assignment_4_1/: CMakeLists.txt  main.cpp
Spring-2022-UIA/ikt103_cpp/assignment_4_2/: CMakeLists.txt  main.cpp  student.cpp  student.h
Spring-2022-UIA/ikt103_cpp/assignment_5_1/: CMakeLists.txt  Database.cpp  Database.h  main.cpp
Spring-2022-UIA/ikt103_cpp/assignment_6_1/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
(+191 files in other folders)
